src/main/gen/org/jetbrains/bsp/bazel/languages/starlark/parser/StarlarkParser.java
// This is a generated file. Not intended for manual editing.
package org.jetbrains.bsp.bazel.languages.starlark.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.jetbrains.bsp.bazel.languages.starlark.StarlarkTypes.*;
import static org.jetbrains.bsp.bazel.languages.starlark.StarlarkParserUtils.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class StarlarkParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(DEF_STATEMENT, FOR_STATEMENT, IF_STATEMENT, SIMPLE_STATEMENT,
      STATEMENT),
    create_token_set_(BINARY_EXPRESSION, EXPRESSION, IF_EXPRESSION, LAMBDA_EXPRESSION,
      PRIMARY_EXPRESSION, UNARY_EXPRESSION),
    create_token_set_(ASSIGN_STMT, BREAK_STMT, CONTINUE_STMT, EXPR_STMT,
      LOAD_STMT, PASS_STMT, RETURN_STMT, STMT),
  };

  /* ********************************************************** */
  // NameArgument | OtherArgument
  public static boolean Argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = NameArgument(b, l + 1);
    if (!r) r = OtherArgument(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Argument (',' Argument)*
  public static boolean Arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, "<arguments>");
    r = Argument(b, l + 1);
    r = r && Arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' Argument)*
  private static boolean Arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Arguments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Arguments_1", c)) break;
    }
    return true;
  }

  // ',' Argument
  private static boolean Arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '=' | '+=' | '-=' | '*=' | '/=' | '//=' | '%=' | '&=' | '|=' | '^=' | '<<=' | '>>='
  public static boolean AssignOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_OPERATOR, "<assign operator>");
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, PLUS_EQ);
    if (!r) r = consumeToken(b, MINUS_EQ);
    if (!r) r = consumeToken(b, ASTERISK_EQ);
    if (!r) r = consumeToken(b, DIV_EQ);
    if (!r) r = consumeToken(b, DIV_INT_EQ);
    if (!r) r = consumeToken(b, MODULO_EQ);
    if (!r) r = consumeToken(b, AND_EQ);
    if (!r) r = consumeToken(b, OR_EQ);
    if (!r) r = consumeToken(b, XOR_EQ);
    if (!r) r = consumeToken(b, SHIFT_LEFT_EQ);
    if (!r) r = consumeToken(b, SHIFT_RIGHT_EQ);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ExprStmt NNL AssignOperator NNL ExprStmt
  public static boolean AssignStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_STMT, "<assign stmt>");
    r = ExprStmt(b, l + 1);
    r = r && NNL(b, l + 1);
    r = r && AssignOperator(b, l + 1);
    r = r && NNL(b, l + 1);
    r = r && ExprStmt(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '==' | '!=' | '<' | '>' | '<=' | '>='
  //                  | '*' | '%' | '/' | '//' | '+' | '-'
  //                  | '|' | '^' | '&' | '<<' | '>>'
  //                  | in | not in
  //                  | or | and
  public static boolean BinaryOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OPERATOR, "<binary operator>");
    r = consumeToken(b, IS_EQUAL);
    if (!r) r = consumeToken(b, IS_NOT_EQUAL);
    if (!r) r = consumeToken(b, LESS_THAN);
    if (!r) r = consumeToken(b, GREATER_THAN);
    if (!r) r = consumeToken(b, LESS_OR_EQUAL);
    if (!r) r = consumeToken(b, GREATER_OR_EQUAL);
    if (!r) r = consumeToken(b, ASTERISK);
    if (!r) r = consumeToken(b, MODULO);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, DIV_INT);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, BIT_OR);
    if (!r) r = consumeToken(b, BIT_XOR);
    if (!r) r = consumeToken(b, BIT_AND);
    if (!r) r = consumeToken(b, BIT_SHIFT_LEFT);
    if (!r) r = consumeToken(b, BIT_SHIFT_RIGHT);
    if (!r) r = consumeToken(b, IN);
    if (!r) r = parseTokens(b, 0, NOT, IN);
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, AND);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // break
  public static boolean BreakStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BreakStmt")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BREAK);
    exit_section_(b, m, BREAK_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // '(' [Arguments [',']] ')'
  public static boolean CallSuffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix")) return false;
    if (!nextTokenIs(b, LEFT_PAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && CallSuffix_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, CALL_SUFFIX, r);
    return r;
  }

  // [Arguments [',']]
  private static boolean CallSuffix_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix_1")) return false;
    CallSuffix_1_0(b, l + 1);
    return true;
  }

  // Arguments [',']
  private static boolean CallSuffix_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Arguments(b, l + 1);
    r = r && CallSuffix_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',']
  private static boolean CallSuffix_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // (for NNL LoopVariables NNL in | if) NNL IfLastExpr
  public static boolean CompClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompClause")) return false;
    if (!nextTokenIs(b, "<comp clause>", FOR, IF)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMP_CLAUSE, "<comp clause>");
    r = CompClause_0(b, l + 1);
    r = r && NNL(b, l + 1);
    r = r && IfLastExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // for NNL LoopVariables NNL in | if
  private static boolean CompClause_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompClause_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CompClause_0_0(b, l + 1);
    if (!r) r = consumeToken(b, IF);
    exit_section_(b, m, null, r);
    return r;
  }

  // for NNL LoopVariables NNL in
  private static boolean CompClause_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompClause_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FOR);
    r = r && NNL(b, l + 1);
    r = r && LoopVariables(b, l + 1);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, IN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // continue
  public static boolean ContinueStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContinueStmt")) return false;
    if (!nextTokenIs(b, CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTINUE);
    exit_section_(b, m, CONTINUE_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // def NNL IDENTIFIER NNL '(' [Parameters [',']] ')' NNL ':' Suite
  public static boolean DefStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStatement")) return false;
    if (!nextTokenIs(b, DEF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DEF);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && DefStatement_5(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Suite(b, l + 1);
    exit_section_(b, m, DEF_STATEMENT, r);
    return r;
  }

  // [Parameters [',']]
  private static boolean DefStatement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStatement_5")) return false;
    DefStatement_5_0(b, l + 1);
    return true;
  }

  // Parameters [',']
  private static boolean DefStatement_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStatement_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Parameters(b, l + 1);
    r = r && DefStatement_5_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',']
  private static boolean DefStatement_5_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStatement_5_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // '{' IfLastEntry CompClause* '}'
  public static boolean DictComp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictComp")) return false;
    if (!nextTokenIs(b, LEFT_CURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_CURLY);
    r = r && IfLastEntry(b, l + 1);
    r = r && DictComp_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_CURLY);
    exit_section_(b, m, DICT_COMP, r);
    return r;
  }

  // CompClause*
  private static boolean DictComp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictComp_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CompClause(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DictComp_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '{' [Entries [',']] '}'
  public static boolean DictExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr")) return false;
    if (!nextTokenIs(b, LEFT_CURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_CURLY);
    r = r && DictExpr_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_CURLY);
    exit_section_(b, m, DICT_EXPR, r);
    return r;
  }

  // [Entries [',']]
  private static boolean DictExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr_1")) return false;
    DictExpr_1_0(b, l + 1);
    return true;
  }

  // Entries [',']
  private static boolean DictExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Entries(b, l + 1);
    r = r && DictExpr_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',']
  private static boolean DictExpr_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // '.' NNL IDENTIFIER
  public static boolean DotSuffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DotSuffix")) return false;
    if (!nextTokenIs(b, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, m, DOT_SUFFIX, r);
    return r;
  }

  /* ********************************************************** */
  // Entry (',' Entry)*
  public static boolean Entries(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entries")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTRIES, "<entries>");
    r = Entry(b, l + 1);
    r = r && Entries_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' Entry)*
  private static boolean Entries_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entries_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Entries_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Entries_1", c)) break;
    }
    return true;
  }

  // ',' Entry
  private static boolean Entries_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entries_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Entry(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Expression NNL ':' NNL Expression
  public static boolean Entry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entry")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTRY, "<entry>");
    r = Expression(b, l + 1, -1);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && NNL(b, l + 1);
    r = r && Expression(b, l + 1, -1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Expression (NNL ',' Expression)*
  public static boolean ExprStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExprStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_STMT, "<expr stmt>");
    r = Expression(b, l + 1, -1);
    r = r && ExprStmt_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (NNL ',' Expression)*
  private static boolean ExprStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExprStmt_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ExprStmt_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ExprStmt_1", c)) break;
    }
    return true;
  }

  // NNL ',' Expression
  private static boolean ExprStmt_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExprStmt_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = NNL(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && Expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Statement*
  static boolean File(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "File", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // for NNL LoopVariables NNL in NNL ExprStmt NNL ':' Suite
  public static boolean ForStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement")) return false;
    if (!nextTokenIs(b, FOR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FOR);
    r = r && NNL(b, l + 1);
    r = r && LoopVariables(b, l + 1);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, IN);
    r = r && NNL(b, l + 1);
    r = r && ExprStmt(b, l + 1);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Suite(b, l + 1);
    exit_section_(b, m, FOR_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // Expression NNL ':' NNL IfLastExpr
  public static boolean IfLastEntry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfLastEntry")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IF_LAST_ENTRY, "<if last entry>");
    r = Expression(b, l + 1, -1);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && NNL(b, l + 1);
    r = r && IfLastExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BinaryExpression | UnaryExpression | PrimaryExpression | LambdaExpression | IfExpression
  public static boolean IfLastExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfLastExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IF_LAST_EXPR, "<if last expr>");
    r = Expression(b, l + 1, 0);
    if (!r) r = UnaryExpression(b, l + 1);
    if (!r) r = PrimaryExpression(b, l + 1);
    if (!r) r = LambdaExpression(b, l + 1);
    if (!r) r = Expression(b, l + 1, -1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // if NNL Expression NNL ':' Suite (elif NNL Expression  NNL ':' Suite)* [else NNL ':' Suite]
  public static boolean IfStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement")) return false;
    if (!nextTokenIs(b, IF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IF);
    r = r && NNL(b, l + 1);
    r = r && Expression(b, l + 1, -1);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Suite(b, l + 1);
    r = r && IfStatement_6(b, l + 1);
    r = r && IfStatement_7(b, l + 1);
    exit_section_(b, m, IF_STATEMENT, r);
    return r;
  }

  // (elif NNL Expression  NNL ':' Suite)*
  private static boolean IfStatement_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement_6")) return false;
    while (true) {
      int c = current_position_(b);
      if (!IfStatement_6_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "IfStatement_6", c)) break;
    }
    return true;
  }

  // elif NNL Expression  NNL ':' Suite
  private static boolean IfStatement_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELIF);
    r = r && NNL(b, l + 1);
    r = r && Expression(b, l + 1, -1);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Suite(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [else NNL ':' Suite]
  private static boolean IfStatement_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement_7")) return false;
    IfStatement_7_0(b, l + 1);
    return true;
  }

  // else NNL ':' Suite
  private static boolean IfStatement_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSE);
    r = r && NNL(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Suite(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '[' IfLastExpr CompClause* ']'
  public static boolean ListComp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListComp")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && IfLastExpr(b, l + 1);
    r = r && ListComp_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, LIST_COMP, r);
    return r;
  }

  // CompClause*
  private static boolean ListComp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListComp_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CompClause(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ListComp_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '[' [ExprStmt [',']] ']'
  public static boolean ListExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListExpr")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && ListExpr_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, LIST_EXPR, r);
    return r;
  }

  // [ExprStmt [',']]
  private static boolean ListExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListExpr_1")) return false;
    ListExpr_1_0(b, l + 1);
    return true;
  }

  // ExprStmt [',']
  private static boolean ListExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ExprStmt(b, l + 1);
    r = r && ListExpr_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
